--- a/index.html
+++ b/index.html
@@ -3928,57 +3928,14 @@ Click the help icon above to learn more.
 			top: 0;
 			left: 0;
 			right: 0;">
-				<a class="navbar-brand" href="#"><img src="/images/logo.png" style="width:150px" alt=""></a>
-				<button class="navbar-toggler" type="button" style="background-color:#fff!important"
+				<a class="navbar-brand" href="#"><img src="/images/logo.png" style="width:210px" alt=""></a>
+				<!-- <button class="navbar-toggler" type="button" style="background-color:#fff!important"
 					data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 					aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
-				</button>
+				</button> -->
 
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav mr-auto text-white main_menu">
-						<li class="nav-item active">
-							<a class="nav-link text-white" href="#">Home <span class="sr-only"></span></a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link text-white" href="#About">About</a>
-						</li>
 
-						<li class="nav-item">
-							<a class="nav-link text-white" href="#Roadmap">Roadmap</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link text-white" href="#Features">Features</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link text-white" href="#Tokenomics">Tokenomics</a>
-						</li>
-					</ul>
-					<div>
-						<div class="header_icon">
-							<span class="elementor-grid-item">
-								<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-fd3385c"
-									href="https://t.me/TeletubbiesEth_portal" target="_blank">
-									<span class="elementor-screen-only">Telegram</span>
-									<i class="fab fa-telegram"></i> </a>
-							</span>
-							<span class="elementor-grid-item">
-								<a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-a99030d"
-									href="https://twitter.com/TeletubbiesEth_" target="_blank">
-									<span class="elementor-screen-only">Twitter</span>
-									<i class="fab fa-twitter"></i> </a>
-							</span>
-							<span class="elementor-grid-item">
-								<a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-a99030d"
-									href="https://medium.com/@Teletubbieseth_" target="_blank">
-
-									<span class="elementor-screen-only">Twitter</span>
-									<i class="fa-brands fa-medium"></i>
-								</a>
-							</span>
-						</div>
-					</div>
-				</div>
 			</nav>
 
 			<div class="elementor-background-overlay"></div>
@@ -5104,9 +5061,8 @@ Click the help icon above to learn more.
 			</div>
 		</section>
 
-		<section class=""
-			style="background:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url('/images/5872695533750041911_120.jpg');background-size: cover;background-position: 100% 100%;background-repeat: no-repeat;"
-			data-id="67fb5cbb" data-element_type="section" data-settings="{&quot;_ha_eqh_enable&quot;:false}">
+		<section class="" style="background:#fff" data-id="67fb5cbb" data-element_type="section"
+			data-settings="{&quot;_ha_eqh_enable&quot;:false}">
 			<div class="elementor-container elementor-column-gap-no">
 				<div class="has_ma_el_bg_slider elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-7383e28c exad-glass-effect-no jltma-glass-effect-no exad-sticky-section-no"
 					data-id="7383e28c" data-element_type="column">
@@ -5133,10 +5089,11 @@ Click the help icon above to learn more.
 										<div class="elementor-element elementor-element-8aba10 exad-sticky-section-no exad-glass-effect-no jltma-glass-effect-no elementor-widget elementor-widget-image"
 											data-id="8aba10" data-element_type="widget"
 											data-widget_type="image.default">
-											<div class="elementor-widget-container">
+											<div class="elementor-widget-container"
+												style="display: flex;align-items: center;justify-content: center;">
 												<img decoding="async" src="/images/logo.png"
-													class="animate__animated animate__pulse animate__infinite"
-													loading="lazy" />
+													class="animate__animated animate__pulse animate__infinite logo_img"
+													style="width:656px" loading="lazy" />
 											</div>
 										</div>
 									</div>
